[package]
name = "webrtc-audio-publishing"
version = "0.1.0"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1"
gst = { version = "0.16", package = "gstreamer" }
gst-webrtc = { version = "0.16", package = "gstreamer-webrtc" }
glib = "0.10"
futures = "0.3"
actix-rt = "1"
actix-web = "2"
actix-web-actors = "2"
actix-service = "1"
actix-tls = { version = "2", features = ["nativetls"] }
log = "0.4"
env_logger = "0.7"
serde = "1"
serde_json = "1"
structopt = "0.3"
tokio = "0.2"
async-tungstenite = { version = "0.8", features = ["tokio-runtime", "tokio-native-tls"] }
