[package]
name = "webrtc-audio-publisher"
version = "0.1.0"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1"
gst = { version = "0.16", package = "gstreamer" }
gst-webrtc = { version = "0.16", package = "gstreamer-webrtc" }
glib = "0.10"
futures = "0.3"
log = "0.4"
env_logger = "0.7"
serde = "1"
serde_json = "1"
structopt = "0.3"
tokio = "0.2"
async-tungstenite = { version = "0.8", features = ["tokio-runtime", "tokio-openssl"] }
uuid = "0.8"
webrtc-audio-publishing = { path = "../common" }
