[package]
name = "webrtc-audio-server"
version = "0.1.0"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1"
gst = { version = "0.16", package = "gstreamer" }
gst-webrtc = { version = "0.16", package = "gstreamer-webrtc" }
gst-app = { version = "0.16", package = "gstreamer-app" }
gst-sdp = { version = "0.16", package = "gstreamer-sdp" }
glib = "0.10"
futures = "0.3"
actix = "0.10"
actix-rt = "1"
actix-web = { version = "3", features = ["openssl"] }
actix-web-actors = "3"
actix-service = "1"
actix-files = "0.3"
openssl = "0.10"
log = "0.4"
env_logger = "0.7"
serde = "1"
serde_json = "1"
structopt = "0.3"
uuid = { version = "0.8", features = ["v4"] }
webrtc-audio-publishing = { path = "../common" }
